<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/callControlView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/call_input_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:singleLine="true"
        android:layout_marginHorizontal="@dimen/spacing_small"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/call_button_id"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="@dimen/spacing_small"
        android:src="@drawable/ic_call_white"
        android:background="@drawable/round_button_green"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="@dimen/spacing_medium"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/call_input_id"/>

    <ImageButton
        android:id="@+id/cancel_call_button_id"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="@dimen/spacing_small"
        android:src="@drawable/ic_call_white"
        android:background="@drawable/round_button_red"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="@dimen/spacing_medium"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/call_input_id"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guideline_start" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guideline_end" />


</androidx.constraintlayout.widget.ConstraintLayout>