<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/credentialLoginView"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <EditText
        android:id="@+id/sip_username_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sip_username"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/sip_password_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/caller_id_name_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/caller_id_name"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/caller_id_number_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/caller_id_number"
        android:inputType="phone"
        android:singleLine="true"/>

</LinearLayout>