<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginSectionView"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/token_login_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_small"
        android:text="@string/token_login"
        android:checked="false"
        android:textOff="@string/off"
        android:textOn="@string/on"
        />

    <include
        android:id="@+id/login_credential_id"
        layout="@layout/include_login_credential_section"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      />

    <include
        android:id="@+id/login_token_id"
        layout="@layout/include_login_token_section"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/connect_button_id"
        style="@style/buttonPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/connect"
         />
</LinearLayout>